# image_viewer_mk2

./: .gitignore  README.md  about.py  app.py  channels_list.py  cmap2d.py  dependencies.md  limiter.py  loader_animation.py  model.py  presenter.py  setup.cfg  skin.py  tk_call_wrapper.py  view.py
ObservableCollections/: observabledict.py  observablelist.py
src/image_viewer_mk2/: __main__.py  about.py  app.py  channels_list.py  loader_animation.py  model.py  presenter.py  renderer.py  scrollable_window.py  skin.py  view.py  windnd.py
src/image_viewer_mk2/ObservableCollections/: event.py  observable.py  observabledict.py  observablelist.py  observableset.py  utils.py
src/image_viewer_mk2/filters/: anisotropic_denoising.py  filter.py  filter_factory.py  frangi.py  gamma_correction.py  gaussian_blur.py  local_norm.py  minmax_norm.py  pipeline.py  sigmoid_norm.py  unsharp_mask.py
src/image_viewer_mk2/tk_widgets/: channels_list.py  filter_config.py  link_button.py  loader_animation.py  panel_pipelines.py  scrolled_frame.py  slider.py  sortable_accordion.py  toggle_button.py  window_about.py
src/image_viewer_mk2/utils/: event_handler.py  tk_call_wrapper.py  tk_lazy_var.py
