[metadata]
name = image-viewer-mk2
author = Jan Kukacka
version = 0.2.2
description = Image viewer for spectral images
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/jankukacka/image_viewer_mk2
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages=find:
python_requires = >=3.7

install_requires =
    matplotlib
    numpy
    Pillow

include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    imvmk2 = image_viewer_mk2.__main__:main
