[metadata]
name = image-viewer-mk2
author = Jan Kukacka
version = 1.0.0b2
description = Image viewer for spectral images
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/jankukacka/image_viewer_mk2
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages=find:
python_requires = >=3.7

install_requires =
    matplotlib
    numpy
    scipy
    Pillow
    scikit-image
    jsonschema==3.0.2; python_version < "3.8.0"
    importlib_metadata; python_version < "3.8.0"
    pywin32;  platform_system=='Windows'

include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    imvmk2 = image_viewer_mk2.__main__:main
